--- a/process.ipynb
+++ b/process.ipynb
@@ -2,11 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n## Culture As Values\\n',\n",
+       " '\\n## The Culture Of Poverty\\n',\n",
+       " '\\n## The Protestant Ethic\\n',\n",
+       " '\\n## Cultural Explanation\\n',\n",
+       " '\\n## Two Models Of Cultural Influence\\n',\n",
+       " '\\n## Unsettled Lives\\n',\n",
+       " '\\n## Settled Lives\\n',\n",
+       " '\\n## Implications For Research\\n',\n",
+       " '\\n## Conclusion\\n',\n",
+       " '\\n## References\\n']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "STANDARD_HEADER_REGEX_PATTERN = r'\\n## [A-Z][a-zA-Z \\t\\-\\d:,&]+\\n'\n",
+    "\n",
+    "with open('./out/Swidler/Swidler.md', 'r', encoding='utf-8') as file:\n",
+    "    bard = file.read()\n",
+    "\n",
+    "\n",
+    "subsections_headers = re.findall(STANDARD_HEADER_REGEX_PATTERN, bard)\n",
+    "\n",
+    "subsections_headers"
    ]
   },
   {
