--- a/nbs/export.ipynb
+++ b/nbs/export.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scp -r username@remote_host:/path/to/remote/directory /path/to/local/directory"
+    "# download md folder locally"
    ]
   }
  ],
