--- a/nbs/export.ipynb
+++ b/nbs/export.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/ob1/ob1-projects/marker/out/2/historyRLHFai2/historyRLHFai2.md', '/home/ob1/ob1-projects/marker/out/2/summariseHF/summariseHF.md', '/home/ob1/ob1-projects/marker/out/2/webgpt/webgpt.md', '/home/ob1/ob1-projects/marker/out/2/Medusa/Medusa.md', '/home/ob1/ob1-projects/marker/out/2/MoMe by Lamini/MoMe by Lamini.md', '/home/ob1/ob1-projects/marker/out/2/qualifying-uncertainty/qualifying-uncertainty.md', '/home/ob1/ob1-projects/marker/out/2/LIMA/LIMA.md', '/home/ob1/ob1-projects/marker/out/2/hellaswag/hellaswag.md', '/home/ob1/ob1-projects/marker/out/2/Gemini1/Gemini1.5.md', '/home/ob1/ob1-projects/marker/out/2/ai2-standardise-eval/ai2-standardise-eval.md', '/home/ob1/ob1-projects/marker/out/2/gemini1/gemini1.md', '/home/ob1/ob1-projects/marker/out/2/rewardbench/rewardbench.md', '/home/ob1/ob1-projects/marker/out/2/comprehensive-overview/comprehensive-overview.md', '/home/ob1/ob1-projects/marker/out/2/deepseek MOE v1/deepseek MOE v1.md', '/home/ob1/ob1-projects/marker/out/2/MosaicIT/MosaicIT.md', '/home/ob1/ob1-projects/marker/out/2/hf-syn-data/hf-syn-data.md', '/home/ob1/ob1-projects/marker/out/2/LoraFFT/LoraFFT.md', '/home/ob1/ob1-projects/marker/out/2/mixtureOfDepths/mixtureOfDepths.md', '/home/ob1/ob1-projects/marker/out/2/IFEval/IFEval.md', '/home/ob1/ob1-projects/marker/out/2/Mixtral-instruct/Mixtral-instruct.md']\n",
-      "20\n"
+      "['/home/ob1/ob1-projects/marker/out/f/FLAN/FLAN.md', '/home/ob1/ob1-projects/marker/out/f/UL2/UL2.md', '/home/ob1/ob1-projects/marker/out/f/LAMBDA/LAMBDA.md', '/home/ob1/ob1-projects/marker/out/f/T5/T5.md', '/home/ob1/ob1-projects/marker/out/f/ViT22B/ViT22B.md', '/home/ob1/ob1-projects/marker/out/f/PaLi-X/PaLi-X.md', '/home/ob1/ob1-projects/marker/out/f/BERT/BERT.md', '/home/ob1/ob1-projects/marker/out/f/PaLm2/PaLm2.md', '/home/ob1/ob1-projects/marker/out/f/FLAN-T5-Legal/FLAN-T5-Legal.md', '/home/ob1/ob1-projects/marker/out/f/FLAN2/FLAN2.md', '/home/ob1/ob1-projects/marker/out/f/MedPaLM/MedPaLM.md']\n",
+      "11\n"
      ]
     }
    ],
@@ -26,21 +26,21 @@
     "    return md_files\n",
     "\n",
     "# Replace 'your_directory_path' with the path to the directory you want to search in\n",
-    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/2')\n",
+    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/f')\n",
     "print(md_files_list)\n",
     "print(len(md_files_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All .md files have been copied to /home/ob1/ob1-projects/marker/md\n"
+      "All .md files have been copied to /home/ob1/ob1-projects/marker/md/f\n"
      ]
     }
    ],
@@ -48,10 +48,10 @@
     "import shutil\n",
     "\n",
     "# Assuming md_files_list is already populated with the paths to .md files\n",
-    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/2')\n",
+    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/f')\n",
     "\n",
     "# Specify the output directory path\n",
-    "output_directory = '/home/ob1/ob1-projects/marker/md'\n",
+    "output_directory = '/home/ob1/ob1-projects/marker/md/f'\n",
     "\n",
     "# Copy each .md file to the output directory\n",
     "for md_file in md_files_list:\n",
