--- a/nbs/export.ipynb
+++ b/nbs/export.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/ob1/ob1-projects/marker/out/3/EMT/EMT.md', '/home/ob1/ob1-projects/marker/out/3/deepseekv2/deepseekv2.md', '/home/ob1/ob1-projects/marker/out/3/CLOverview/CLOverview.md', '/home/ob1/ob1-projects/marker/out/3/miniCPM/miniCPM.md', '/home/ob1/ob1-projects/marker/out/3/sparse-moe/sparse-moe.md', '/home/ob1/ob1-projects/marker/out/3/rephrasing-web/rephrasing-web.md', '/home/ob1/ob1-projects/marker/out/3/task-vectors/task-vectors.md', '/home/ob1/ob1-projects/marker/out/3/LC-AlpaccaEval/LC-AlpaccaEval.md', '/home/ob1/ob1-projects/marker/out/3/Mistral7B/Mistral7B.md', '/home/ob1/ob1-projects/marker/out/3/Pythia/Pythia.md', '/home/ob1/ob1-projects/marker/out/3/1000-shot-multimodal/1000-shot-multimodal.md', '/home/ob1/ob1-projects/marker/out/3/Falcon/Falcon.md', '/home/ob1/ob1-projects/marker/out/3/og-bp/og-bp.md', '/home/ob1/ob1-projects/marker/out/3/LAMBADA/LAMBADA.md', '/home/ob1/ob1-projects/marker/out/3/GPipe/GPipe.md', '/home/ob1/ob1-projects/marker/out/3/Nemotron/Nemotron.md', '/home/ob1/ob1-projects/marker/out/3/mesh-TF-DT/mesh-TF-DT.md', '/home/ob1/ob1-projects/marker/out/3/medusa/medusa.md', '/home/ob1/ob1-projects/marker/out/3/EasyProblems/EasyProblems.md', '/home/ob1/ob1-projects/marker/out/3/safety-alignment-framework/safety-alignment-framework.md', '/home/ob1/ob1-projects/marker/out/3/SMAUG/SMAUG.md', '/home/ob1/ob1-projects/marker/out/3/alpha-geometry/alpha-geometry.md', '/home/ob1/ob1-projects/marker/out/3/MATH eval/MATH eval.md', '/home/ob1/ob1-projects/marker/out/3/pythia6B-finance/pythia6B-finance.md', '/home/ob1/ob1-projects/marker/out/3/glaze/glaze.md', '/home/ob1/ob1-projects/marker/out/3/syntheticMathDistil/syntheticMathDistil.md', '/home/ob1/ob1-projects/marker/out/3/alpha-code-2/alpha-code-2.md', '/home/ob1/ob1-projects/marker/out/3/EvolScale/EvolScale.md', '/home/ob1/ob1-projects/marker/out/3/L2/L2.md', '/home/ob1/ob1-projects/marker/out/3/auto-LLM-Eval/auto-LLM-Eval.md', '/home/ob1/ob1-projects/marker/out/3/dolma/dolma.md', '/home/ob1/ob1-projects/marker/out/3/fineweb/fineweb.md', '/home/ob1/ob1-projects/marker/out/3/RULER/RULER.md', '/home/ob1/ob1-projects/marker/out/3/memorizing-transformers/memorizing-transformers.md', '/home/ob1/ob1-projects/marker/out/3/ROberTa/ROberTa.md', '/home/ob1/ob1-projects/marker/out/3/Llama1/Llama1.md', '/home/ob1/ob1-projects/marker/out/3/Polygot-Ko/Polygot-Ko.md', '/home/ob1/ob1-projects/marker/out/3/sparse-upcycling/sparse-upcycling.md']\n",
-      "38\n"
+      "['/home/ob1/ob1-projects/marker/out/bigf/2023-05 - DPO - Stanford/2023-05 - DPO - Stanford.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-01 - Switch Transformers - Google/2021-01 - Switch Transformers - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-04 - PaLM - Google/2022-04 - PaLM - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-04 - Pythia - EleutherAI et al/2023-04 - Pythia - EleutherAI et al..md', '/home/ob1/ob1-projects/marker/out/bigf/2023-05 - ToT - Google+Princeton/2023-05 - ToT - Google+Princeton.md', '/home/ob1/ob1-projects/marker/out/bigf/2020-05 - GPT 3/2020-05 - GPT 3.0 - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2018-10 - BERT - Google/2018-10 - BERT - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-06 - METALM - Microsoft/2022-06 - METALM - Microsoft.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-02 - Kosmos-1 - Microsoft/2023-02 - Kosmos-1 - Microsoft.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-12 - GLaM - Google/2021-12 - GLaM - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-03 - GPT-4-technical-report - OpenAI/2023-03 - GPT-4-technical-report - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-05 - Dromedary - CMU et al/2023-05 - Dromedary - CMU et al..md', '/home/ob1/ob1-projects/marker/out/bigf/2022-10 - GLM-130B - Tsinghua/2022-10 - GLM-130B - Tsinghua.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-04 - LLaVA - UW–Madison+Microsoft/2023-04 - LLaVA - UW–Madison+Microsoft.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-08 - Codex - OpenAI/2021-08 - Codex - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-05 - UL2 - Google/2022-05 - UL2 - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2019-10 - ZeRO - Microsoft/2019-10 - ZeRO - Microsoft.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-12 - OPT-IML - Meta/2022-12 - OPT-IML - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-07 - LLaMA2 - Meta/2023-07 - LLaMA2 - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-09 - FLAN - Google/2021-09 - FLAN - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-01 - Minerva - Google/2022-01 - Minerva - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2020-01 - Scaling Law - OpenAI/2020-01 - Scaling Law - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-10 - T0 - HuggingFace et al/2021-10 - T0 - HuggingFace et al..md', '/home/ob1/ob1-projects/marker/out/bigf/2019-02 - GPT 2/2019-02 - GPT 2.0 - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-01 - COT - Google/2022-01 - COT - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2024-05 - Mamba2 - CMU+Princeton/2024-05 - Mamba2 - CMU+Princeton.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-06 - Emergent Abilities - Google/2022-06 - Emergent Abilities - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-01 - Megatron-Turing NLG - Microsoft+NVIDIA/2022-01 - Megatron-Turing NLG - Microsoft+NVIDIA.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-09 - Sparrow - DeepMind/2022-09 - Sparrow - DeepMind.md', '/home/ob1/ob1-projects/marker/out/bigf/2024-01 - DeepSeek-v2 - DeepSeek/2024-01 - DeepSeek-v2 - DeepSeek.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-12 - Gopher - DeepMind/2021-12 - Gopher - DeepMind.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-02 - LLaMA-1 - Meta/2023-02 - LLaMA-1 - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-05 - RWKV - Bo Peng/2023-05 - RWKV - Bo Peng.md', '/home/ob1/ob1-projects/marker/out/bigf/2024-05 - Llama3 - Meta/2024-05 - Llama3 - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-10 - Mistral 7B - Mistral/2023-10 - Mistral 7B - Mistral.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-03 - InstructGPT - OpenAI/2022-03 - InstructGPT - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2019-09 - Megatron-LM - NVIDIA/2019-09 - Megatron-LM - NVIDIA.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-01 - Flan 2022 Collection - Google/2023-01 - Flan 2022 Collection - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-12 - Retrieval-Enhanced Transformer (Retro) - DeepMind/2021-12 - Retrieval-Enhanced Transformer (Retro) - DeepMind.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-01 - LaMDA - Google/2022-01 - LaMDA - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-03 - LRU - DeepMind/2023-03 - LRU - DeepMind.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-06 - BIG-bench - Google/2022-06 - BIG-bench - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2019-10 - T5 - Google/2019-10 - T5 - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-03 - PaLM-E - Google/2023-03 - PaLM-E - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-11 - BLOOM - BigScience/2022-11 - BLOOM - BigScience.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-12 - WebGPT - OpenAI/2021-12 - WebGPT - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2021-08 - Foundation Models - Stanford/2021-08 - Foundation Models - Stanford.md', '/home/ob1/ob1-projects/marker/out/bigf/2018-06 - GPT 1/2018-06 - GPT 1.0 - OpenAI.md', '/home/ob1/ob1-projects/marker/out/bigf/2024-03 - Jamba - AI21 Labs/2024-03 - Jamba - AI21 Labs.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-11 - Galactica - Meta/2022-11 - Galactica - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-05 - PaLM 2 - Google/2023-05 - PaLM 2 - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2023-12 - Mamba - CMU+Princeton/2023-12 - Mamba - CMU+Princeton.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-05 - OPT - Meta/2022-05 - OPT - Meta.md', '/home/ob1/ob1-projects/marker/out/bigf/2017-06 - Transformers - Google/2017-06 - Transformers - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-10 - Flan-T5-PaLM - Google/2022-10 - Flan-T5-PaLM - Google.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-04 - Chinchilla - DeepMind/2022-04 - Chinchilla - DeepMind.md', '/home/ob1/ob1-projects/marker/out/bigf/2022-11 - HELM - Stanford/2022-11 - HELM - Stanford.md']\n",
+      "57\n"
      ]
     }
    ],
@@ -26,28 +26,28 @@
     "    return md_files\n",
     "\n",
     "# Replace 'your_directory_path' with the path to the directory you want to search in\n",
-    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/3')\n",
+    "md_files_list = find_md_files('/home/ob1/ob1-projects/marker/out/bigf')\n",
     "print(md_files_list)\n",
     "print(len(md_files_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All .md files have been copied to /home/ob1/ob1-projects/marker/md/3\n"
+      "All .md files have been copied to /home/ob1/ob1-projects/marker/md/bigf\n"
      ]
     }
    ],
    "source": [
     "import shutil\n",
     "\n",
-    "batch_name = \"3\"\n",
+    "batch_name = \"bigf\" #edit this\n",
     "\n",
     "# Assuming md_files_list is already populated with the paths to .md files\n",
     "md_files_list = find_md_files(f'/home/ob1/ob1-projects/marker/out/{batch_name}')\n",
